--- a/app/assets/stylesheets/greeting.css
+++ b/app/assets/stylesheets/greeting.css
@@ -17,7 +17,7 @@
 }
 
 .splash-header-logo {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
     font-feature-settings: "lnum";
     font-style: italic;
