--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -15,7 +15,7 @@
   transform: translate(-50%, -50%);
 }
 
-.modal-background:hover .modal-child{
+/* .modal-background:hover .modal-child{
     display: flex;
     
-}
+} */
