--- a/app/assets/stylesheets/login_form.css
+++ b/app/assets/stylesheets/login_form.css
@@ -87,6 +87,11 @@
   margin-left: 5px;
   color: cornflowerblue;
   text-decoration: none;
+  border: none;
+  background: transparent;
+  width: fit-content;
+  padding: 0px;
+  font-size: 14px;
 }
 
 .login-form-btn:hover {
