--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -63,6 +63,12 @@
     text-decoration: none;
     font-weight: bold;
     color: black;
+    border: none;
+    background: transparent;
+    width: fit-content;
+    padding: 0px;
+    font-size: 17px;
+    cursor: pointer;
 }
 
 .splash-section-2 {
