Hit a wall with a dropdown menu for user

--- a/app/assets/stylesheets/home_sidebar.css
+++ b/app/assets/stylesheets/home_sidebar.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 227px;
-    background-color: #F2F4F5;
+    background-color: rgb(236, 239, 240);
     height: 100%;
 }
 
