--- a/app/assets/stylesheets/home_nav.css
+++ b/app/assets/stylesheets/home_nav.css
@@ -62,31 +62,29 @@
     margin-left: 735px;
     color: white;
     font-size: 18px;
+    cursor: pointer;
+}
+
+
+.loggedin-user ul {
+    position: relative;
+    display: inline-block;
 }
 
 .loggedin-user ul {
     display: none;
-}
-
-.loggedin-user:hover ul {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    position: relative;
-    justify-content: space-around;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
 
 .user-info {
-    position: absolute;
-    width: 180px;
-    height: 300px;
-    background-color: white;
-    right: 180px;
     color: black;
-    list-style-type: none;
-    margin: 0px;
-    padding: 0px;
-
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
 }
 
 .user-info li:hover {
