--- a/app/assets/stylesheets/home_nav.css
+++ b/app/assets/stylesheets/home_nav.css
@@ -51,7 +51,7 @@
     border-radius: 80%;
 } */
 
-.loggedin-user {
+/* .loggedin-user {
     height: 36px;
     width: 36px;
     border-radius: 50%;
@@ -63,37 +63,56 @@
     color: white;
     font-size: 18px;
     cursor: pointer;
-}
+} */
 
-
-.loggedin-user ul {
+/* .dropdown {
     position: relative;
     display: inline-block;
 }
 
-.loggedin-user ul {
+
+.dropdown:hover .user-info {
+    display: block;
+}
+
+.dropdown:hover .loggedin-user {
+    /* display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1; */
+    /* background-color: #3e8e41;
+} */
+
+/* 
+.user-info {
     display: none;
     position: absolute;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
-.user-info {
-    color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.user-info li:hover {
+.user-info li {
     background-color: rgb(235, 231, 231);
     text-decoration: none;
-    width: 100%;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 
     /* height: 100%; */
-}
+/* }
+
+.user-info li:hover {
+    background-color: #f1f1f1
+} */
+
 
 
 .loggedin-upload {
@@ -113,4 +132,46 @@
     size: 25px;
 }
 
+.dropbtn {
+    height: 36px;
+    width: 36px;
+    border-radius: 50%;
+    border: 1px solid rgb(226, 73, 59);
+    background-color: rgb(231, 68, 54);
+    margin-top: 11px;
+    color: white;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
 
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* .dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+} */
