--- a/app/assets/stylesheets/home_sidebar.css
+++ b/app/assets/stylesheets/home_sidebar.css
@@ -2,10 +2,27 @@
     display: flex;
     flex-direction: column;
     width: 227px;
-    background-color: rgb(236, 239, 240);
+    background-color: rgb(247, 248, 249);
     height: 100%;
 }
 
 .link-logo {
     zoom: 20%;
+}
+
+.sidebar-new-video {
+    color: white;
+    background-color: rgb(0, 173, 239);
+    width: 174px;
+    height: 39px;
+    border: 1px solid rgb(0, 173, 239);
+    border-radius: 2.5px;
+    margin-top: 26px;
+    margin-left: 26px;
+    font-size: 15px;
+    margin-bottom: 26px;
+}
+
+.sidebar-list {
+    
 }
