--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,12 @@
     <script type="text/javascript">
       window.vertovURL = "<%= image_url('vertov.png') %>";
     </script>
+     <script type="text/javascript">
+      window.gitLogoURL = "<%= image_url('GitHub_Logo.png') %>";
+    </script>
+     <script type="text/javascript">
+      window.linkSmallURL = "<%= image_url('linkedin_small.png') %>";
+    </script>
     <% if current_user %>
       <script>
         window.currentUser = {
