--- a/app/assets/stylesheets/home_nav.css
+++ b/app/assets/stylesheets/home_nav.css
@@ -1,11 +1,16 @@
-
+.rainbow {
+    width: 100%;
+    height: 3px;
+    background-image: -webkit-linear-gradient(left,#73D2F6,#08C 22%,#7FC400 36%,#FFD583 48%,#FFB21E 63%,#FF4D4D 76%,#503873);
+    /* background-image: linear-gradient(to right,#73D2F6,#08C 22%,#7FC400 36%,#FFD583 48%,#FFB21E 63%,#FF4D4D 76%,#503873); */
+}
 
 .loggedin-nav {
     display: flex;
     flex-direction: row;
     background-color: #F2F4F5;
     width: 100%;
-    height: 57px;
+    height: 59px;
     border: 1px solid lightgray;
 }
 
@@ -59,19 +64,20 @@
     width: 36px;
     border-radius: 50%;
     border: 1px solid rgb(226, 73, 59);
-    background-color: rgb(231, 68, 54);
-    margin-top: 11px;
+    background-color: rgb(238, 73, 58);
+    margin-top: 13px;
     color: white;
     font-size: 16px;
     border: none;
     cursor: pointer;
     margin-left: 732px;
+    /* margin-left: 150px; */
     position: relative;
     display: inline-block;
+    
 }
 
-.dropdown {
-}
+/* .dropdbtn:hover { transform: scale(2.1); } */
 
 .dropdown-content {
   display: none;
@@ -111,12 +117,12 @@
     padding: 5px;
     /* justify-content: center; */
     /* align-content: center; */
-    padding-top: 17px;
-    border-top: 1px solid lightgrey;
+    padding-top: 15px;
+    /* border-top: 1px solid lightgrey; */
     padding-left: 15px;
     padding-right: 18px;
     margin-bottom: 15px;
-    /* margin-top: 25px; */
+    margin-top: 15px;
 }
 
 .dropdown-content .user-name {
@@ -136,4 +142,6 @@
     /* margin-top: 15px; */
     padding-top: 15px;
     margin-bottom: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid lightgray;
 }
