--- a/app/assets/stylesheets/home_nav.css
+++ b/app/assets/stylesheets/home_nav.css
@@ -42,7 +42,7 @@
     margin-left: 10px;
 }
 
-.loggedin-upload {
+.nav-new-video {
     margin-left: 20px;
     margin-top: 11px;
     margin-bottom: 11px;
@@ -53,10 +53,13 @@
     border-radius: 4.5px;
     width: 120px;
     size: 22px;
+    text-decoration: none;
+    padding-top: 8px;
+    font-size: 15px;
 }
 
-.loggedin-upload::first-letter {
-    size: 25px;
+.nav-new-video:hover {
+    background-color: rgb(0, 111, 155);;
 }
 
 .dropbtn {
@@ -71,7 +74,7 @@
     border: none;
     cursor: pointer;
     margin-left: 732px;
-    /* margin-left: 150px; */
+    /* margin-left: 50px; */
     position: relative;
     display: inline-block;
     
@@ -145,3 +148,4 @@
     padding-bottom: 15px;
     border-bottom: 1px solid lightgray;
 }
+
