--- a/app/assets/stylesheets/home_sidebar.css
+++ b/app/assets/stylesheets/home_sidebar.css
@@ -27,18 +27,32 @@
     color: white;
     background-color: rgb(0, 173, 239);
     width: 174px;
-    height: 39px;
+    height: 31px;
     border: 1px solid rgb(0, 173, 239);
     border-radius: 2.5px;
-    margin-top: 27px;
+    margin-top: 21px;
     margin-left: 26px;
-    font-size: 15px;
+    font-size: 13px;
     margin-bottom: 20px;
+    text-decoration: none;
+    /* padding-left: 27px; */
+    text-align: center;
+    padding-top: 6px;
+    ont-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    letter-spacing: 0.7px;
+    -webkit-box-align: center;
 }
 
 .sidebar-new-video::first-letter {
     font-size: 18px;
     margin-right: 5px;
+}
+
+.sidebar-new-video:hover {
+    background-color: rgb(0, 111, 155);;
 }
 
 .line {
