--- a/app/assets/stylesheets/home_nav.css
+++ b/app/assets/stylesheets/home_nav.css
@@ -55,7 +55,13 @@
     size: 22px;
     text-decoration: none;
     padding-top: 8px;
-    font-size: 15px;
+    font-size: 13px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    letter-spacing: 0.7px;
+    -webkit-box-align: center;
 }
 
 .nav-new-video:hover {
