--- a/app/assets/stylesheets/home_sidebar.css
+++ b/app/assets/stylesheets/home_sidebar.css
@@ -38,7 +38,7 @@
     /* padding-left: 27px; */
     text-align: center;
     padding-top: 6px;
-    ont-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 500;
     text-align: center;
     vertical-align: middle;
