--- a/app/assets/stylesheets/upload.css
+++ b/app/assets/stylesheets/upload.css
@@ -2,5 +2,60 @@ div.upload-component {
     height: calc(100vh - 66px);
     overflow-y: scroll;
     margin-left: 227px;
+}
 
+.upload-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin: 30px;
+    border: 1px dashed #D0D8DB;
+    border-radius: 6.5px;
+    height: 367px;
+    width: 658px;
+    margin-top: 100px;
+    margin-left: 200px;
+    padding-bottom: 35px;
+}
+
+.upload-imput-title {
+    width: 332px;
+    height: 34px;
+    font-size: 15px;
+    text-indent: 15px;
+    border-radius: 4px;
+    border-color: lightgray;
+
+}
+
+.upload-imput-description {
+    width: 323px;
+    height: 34px;
+    font-size: 15px;
+    /* text-indent: 15px; */
+    /* justify-content: center; */
+    padding-top: 22px;
+    padding-left: 15px;
+    padding-bottom: 15px;
+    border-radius: 4px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.upload-file {
+    padding-left: 92px; 
+    font-size: 15px;
+    /* text-indent: 15px; */
+    /* background-color: rgb(0, 173, 239); */
+}
+
+.upload-button {
+    width: 221px;
+    height: 34px;
+    font-size: 15px;
+    /* text-indent: 15px; */
+    color: white;
+    background-color: #7fc400;
+    border-radius: 4px;
+    border-color: #7fc400;
 }
