--- a/app/assets/stylesheets/video.css
+++ b/app/assets/stylesheets/video.css
@@ -2,5 +2,9 @@ div.video-container {
     height: calc(100vh - 65px);
     overflow-y: scroll;
     margin-left: 227px;
+    
+}
 
+.video-player {
+    margin-left: 400px;
 }
