--- a/app/assets/stylesheets/home_nav.css
+++ b/app/assets/stylesheets/home_nav.css
@@ -1,4 +1,4 @@
-.rainbow {
+.gradient {
     width: 100%;
     height: 3px;
     background-image: -webkit-linear-gradient(left,#73D2F6,#08C 22%,#7FC400 36%,#FFD583 48%,#FFB21E 63%,#FF4D4D 76%,#503873);
@@ -12,6 +12,17 @@
     width: 100%;
     height: 59px;
     border: 1px solid lightgray;
+    justify-content: space-between;
+    outline: transparent;
+}
+
+.left-nav {
+    display: inline-flex;
+}
+
+.right-nav {
+    display: inline-flex;
+    padding-left: 20px;
 }
 
 .loggedin-header-logo {
@@ -43,15 +54,16 @@
 }
 
 .nav-new-video {
-    margin-left: 20px;
+    margin-left: 10px;
     margin-top: 11px;
     margin-bottom: 11px;
+    margin-right: 8px;
     text-align: center;
     color: white;
     background-color: rgb(0, 173, 239);
     border: 1px solid;
     border-radius: 4.5px;
-    width: 120px;
+    width: 110px;
     size: 22px;
     text-decoration: none;
     padding-top: 8px;
@@ -62,6 +74,7 @@
     vertical-align: middle;
     letter-spacing: 0.7px;
     -webkit-box-align: center;
+    margin-right: 27px;
 }
 
 .nav-new-video:hover {
@@ -79,7 +92,7 @@
     font-size: 16px;
     border: none;
     cursor: pointer;
-    margin-left: 732px;
+    /* margin-left: 732px; */
     /* margin-left: 50px; */
     position: relative;
     display: inline-block;
@@ -97,7 +110,7 @@
   z-index: 1;
   padding: 0px;
   right: -4px;
-  margin-top: 9px;
+  margin-top: 16px;
   /* width: 250px; */
   /* size: 3px; */
 }
@@ -116,7 +129,15 @@
 .dropdown-content a:hover {background-color: #f1f1f1}
 .dropdown-content .loggedin-logout:hover {background-color: lightgrey}
 
-.dropbtn:hover .dropdown-content {
+.dropdown {
+    width: 40px;
+    /* background-color: aquamarine; */
+    /* margin-left: 715px; */
+    padding-left: 10px;
+    padding-right: 7px;
+}
+
+.dropdown:hover .dropdown-content {
   display: block;
 }
 
