--- a/app/assets/stylesheets/login_form.css
+++ b/app/assets/stylesheets/login_form.css
@@ -7,10 +7,11 @@
   padding: 10px; */
   background-color: white;
   width: 406px;
-  height: 384px;
+  /* height: 400px; */
   border-radius: 7.5;
   border: solid 1px lightgray;
   border-radius: 5px;
+ 
 } 
 
 .login-header {
@@ -97,3 +98,17 @@
 .login-form-btn:hover {
   color: blue;
 }
+
+.errors p {
+  margin-bottom: 7px;
+  justify-content: center;
+  border: 0.5px solid lightgray;
+  text-indent: 3px;
+  font-size: 14px;
+  background-color: #ffeded;
+  color: black;
+  padding: 15px;
+  margin-left: 24px;
+  margin-right: 24px;
+  border-radius: 3.5px;
+} 
