--- a/app/assets/stylesheets/signup_form.css
+++ b/app/assets/stylesheets/signup_form.css
@@ -4,7 +4,7 @@
     /* justify-content: space-evenly; */
   background-color: white;
   width: 406px;
-  height: 427px;
+  /* height: 500px; */
   border-radius: 7.5;
   border: solid 1px lightgray;
   border-radius: 5px;
@@ -77,6 +77,7 @@
   font-size: 14px;
   margin-left: 100px;
   color: gray;
+  margin-bottom: 15px;
 }
 
 .signup-form-btn {
