--- a/app/assets/stylesheets/home_sidebar.css
+++ b/app/assets/stylesheets/home_sidebar.css
@@ -84,7 +84,7 @@
 .sidebar-list a {
     /* height: 20px; */
     padding: 15px;
-    font-size: 14px;
+    font-size: 15px;
     color: black;
     text-decoration: none;
     cursor: pointer;
@@ -108,4 +108,9 @@
     margin-left: 20px;
     margin-top: 66px;
     height: 150px;
+}
+
+.svg {
+    height: 19px;
+    margin-right: 8px;
 }
