Added svg on home  page and refactored uupload

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
       window.logoURL = "<%= image_url('foxeo_logo.png') %>";
     </script>
     <script type="text/javascript">
-      window.gitURL = "<%= image_url('GitHub-Mark-32px.png') %>";
+      window.smileyURL = "<%= image_url('Smiley.png') %>";
     </script>
     <script type="text/javascript">
       window.vertovURL = "<%= image_url('vertov.png') %>";
