--- a/app/assets/stylesheets/upload.css
+++ b/app/assets/stylesheets/upload.css
@@ -2,6 +2,10 @@ div.upload-component {
     height: calc(100vh - 66px);
     overflow-y: scroll;
     margin-left: 227px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .upload-form {
@@ -12,11 +16,16 @@ div.upload-component {
     margin: 30px;
     border: 1px dashed #D0D8DB;
     border-radius: 6.5px;
-    height: 367px;
+    height: 70%;
     width: 658px;
     margin-top: 100px;
-    margin-left: 200px;
+    /* margin-left: 200px; */
     padding-bottom: 35px;
+}
+
+.upload-title {
+    font-size: 31px;
+    font-weight: 500;
 }
 
 .upload-imput-title {
@@ -50,6 +59,10 @@ div.upload-component {
 }
 
 .upload-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     width: 221px;
     height: 34px;
     font-size: 15px;
@@ -66,7 +79,7 @@ div.upload-component {
 }
 
 .upload-logo {
-    height: 15px;
+    height: 18px;
     color: white;
     margin-right: 5px;
 }
