--- a/app/assets/stylesheets/upload.css
+++ b/app/assets/stylesheets/upload.css
@@ -18,7 +18,7 @@ div.upload-component {
     border-radius: 6.5px;
     height: 70%;
     width: 658px;
-    margin-top: 100px;
+    margin-top: 50px;
     /* margin-left: 200px; */
     padding-bottom: 35px;
 }
@@ -54,6 +54,7 @@ div.upload-component {
 .upload-file {
     padding-left: 92px; 
     font-size: 15px;
+    outline-color: transparent;
     /* text-indent: 15px; */
     /* background-color: rgb(0, 173, 239); */
 }
