Styled home page

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,6 +1,95 @@
 div.home-container {
-    height: calc(100vh - 65px);
+    height: calc(100vh - 66px);
     overflow-y: scroll;
     margin-left: 227px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
 
 }
+
+.home-ul {
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+} 
+
+.home-list-item {
+    width: 260px;
+    height: 270px;
+    border: 0.5px solid lightgray;
+    border-radius: 5.5px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    box-shadow: 0 4px 8px 0 rgba(113, 113, 113, 0.2), 0 6px 20px 0 rgba(142, 142, 142, 0.1);
+}
+
+.home-video {
+    margin-top: 25px;
+    background-color: black;
+    height: 160px;
+    width: 260px;
+    cursor: pointer;
+    opacity: 1;
+} 
+
+.home-video:hover {
+    transition: 0.5s;
+    opacity: 0.5;
+    /* linear-gradient(0.6 50%); */
+    
+}
+
+.video-title {
+    color: #17272E;
+    font-size: 14px;
+    margin-left: 15px;
+    font-weight: 900;
+    margin-top: 7px;
+}
+
+.video-upload-date {
+    font-size: 13px;
+    margin-left: 15px;
+    font-weight: 500;
+    margin-top: 7px;
+    color: grey;
+}
+
+.home-title {
+    align-self: start;
+    font-size: 27px;
+    margin-left: 60px;
+    margin-top: 33px;
+    font-weight: 500;
+}
+
+.home-footer {
+    display: inline-flex;
+    margin: 25px;
+    align-self: start;
+    margin-left: 60px;
+}
+
+.home-footer-1 {
+    font-size: 12px;
+    color: #8494A4;
+    margin-right: 15px;
+    margin-top: 5px
+}
+
+.home-footer-2 {
+    font-size: 12px;
+    color: #8494A4;
+}
+
+._3Weix {
+    height: 15px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+
