--- a/app/assets/stylesheets/home_sidebar.css
+++ b/app/assets/stylesheets/home_sidebar.css
@@ -61,6 +61,7 @@
     margin-left: 25px;
     color: rgb(248, 248, 248);
     margin-bottom: 7px;
+    margin-top: 8px;
 }
 
 .line-2 {
@@ -111,7 +112,7 @@
 }
 
 .svg {
-    height: 19px;
+    height: 21px;
     margin-right: 8px;
 }
 
