--- a/app/assets/stylesheets/home_nav.css
+++ b/app/assets/stylesheets/home_nav.css
@@ -18,6 +18,7 @@
 
 .left-nav {
     display: inline-flex;
+    align-self: center;
 }
 
 .right-nav {
@@ -28,7 +29,6 @@
 .loggedin-header-logo {
     color: rgb(26, 46, 59);
     margin-left: 32px;
-    margin-top: 11px;
     margin-right: 10px;
 }
 
@@ -40,6 +40,7 @@
     color: grey;
     margin-left: 10px;
     padding: 10px;
+    text-decoration: none;
 }
 
 .loggedin-watch {
@@ -51,6 +52,8 @@
     /* margin: left 10px; */
     padding: 10px;
     margin-left: 10px;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 .nav-new-video {
