--- a/app/assets/stylesheets/video.css
+++ b/app/assets/stylesheets/video.css
@@ -1,10 +1,15 @@
 div.video-container {
-    height: calc(100vh - 65px);
+    height: calc(100vh - 66px);
     overflow-y: scroll;
     margin-left: 227px;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;   
 }
 
 .video-player {
-    margin-left: 400px;
+    width: 100%;
+    height: 500px;
+    background-color: black;
 }
