Added demo user funcitonality and made /home regular route

--- a/app/assets/stylesheets/play.css
+++ b/app/assets/stylesheets/play.css
@@ -1,15 +1,18 @@
-div.video-container {
+#video-container {
+    /* width: 100%;
+    height: 100%; */
+    /* z-index: 10;
+    position: relative; */
     height: calc(100vh - 66px);
     overflow-y: scroll;
     margin-left: 227px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: center;   
+    align-items: center; 
 }
 
-/* .video-player {
+.video-player {
+    height: 533px;
     width: 100%;
-    height: 500px;
     background-color: black;
-} */
+}
