--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -5,7 +5,6 @@ div.home-container {
     display: flex;
     flex-direction: column;
     align-items: center; 
-
 }
 
 .home-ul {
@@ -19,7 +18,7 @@ div.home-container {
 
 .home-list-item {
     width: 260px;
-    height: 270px;
+    height: 300px;
     border: 0.5px solid lightgray;
     border-radius: 5.5px;
     margin-top: 15px;
@@ -28,7 +27,7 @@ div.home-container {
 }
 
 .home-video {
-    margin-top: 25px;
+    margin-top: 15px;
     background-color: black;
     height: 160px;
     width: 260px;
@@ -37,10 +36,16 @@ div.home-container {
 } 
 
 .home-video:hover {
-    transition: 0.5s;
-    opacity: 0.5;
-    /* linear-gradient(0.6 50%); */
-    
+    /* transition: 0.5s; */
+    /* opacity: 0.5; */
+    /* image: linear-gradient(to top, rgba(255,0,0,0), rgba(255,0,0,1)); */
+    /* color: rgb(125, 125, 125); */
+    color: black;
+    -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+    -webkit-mask-size: 100% 98%;
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-position: top;
+
 }
 
 .video-title {
@@ -52,9 +57,9 @@ div.home-container {
 }
 
 .video-upload-date {
-    font-size: 13px;
+    font-size: 14px;
     margin-left: 15px;
-    font-weight: 500;
+    font-weight: 400;
     margin-top: 7px;
     color: grey;
 }
@@ -64,6 +69,25 @@ div.home-container {
     font-size: 27px;
     margin-left: 60px;
     margin-top: 33px;
+    font-weight: 500;
+}
+
+.home-video-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-content: center;
+    font-size: 14px;
+    margin-top: 15px;
+    margin-left: 15px;
+}
+
+.home-video-header-1 {
+    margin-right: 8px;
+    color: gray;
+}
+
+.home-video-header-2 {
     font-weight: 500;
 }
 
