--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -20,6 +20,19 @@
     text-align: center;
     font-size: 20px;
     font-weight: normal;
+    margin-bottom: 50px
+}
+
+#demo-login {
+    text-decoration: none;
+    background-color: #d86995;
+    width: 143px;
+    height: 50px;
+    border: 1px solid #d86995;
+    border-radius: 4.5px;
+    color: white;
+    font-weight: 500;
+    cursor: pointer;
 }
 
 .splash-section-1 {
