--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -64,6 +64,15 @@ div.home-container {
     color: grey;
 }
 
+.video-user-name {
+    color: #17272E;
+    font-size: 14px;
+    margin-left: 15px;
+    font-weight: 900;
+    margin-top: 15px;
+    padding-top: 15px;
+}
+
 .home-title {
     align-self: start;
     font-size: 27px;
@@ -96,6 +105,7 @@ div.home-container {
     margin: 25px;
     align-self: start;
     margin-left: 60px;
+    
 }
 
 .home-footer-1 {
