--- a/app/assets/stylesheets/home_nav.css
+++ b/app/assets/stylesheets/home_nav.css
@@ -64,7 +64,7 @@
     text-align: center;
     color: white;
     background-color: rgb(0, 173, 239);
-    border: 1px solid;
+    border: 1px solid rgb(0, 173, 239);
     border-radius: 4.5px;
     width: 110px;
     size: 22px;
@@ -161,14 +161,24 @@
 .dropdown-content .user-name {
     color: black;
     height: 30px;
-    padding-top: 15px;
+    padding-top: 20px;
     text-align: left;
     margin-left: 15px;
     font-weight: bold;
     margin-right: 15px;
     font-size: 14px;
     /* width: 100%; */
+    align-self: center;
 } 
+
+#user-profile-link {
+    color: #00adef;
+    font-size: 13px;
+    text-align: start;
+    cursor: pointer;
+    padding-top: 0;
+    background-color: transparent;
+}
 
 .dropdown-content .a-items {
     border-top: 1px solid lightgray;
