--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -7,3 +7,17 @@ div.user-container {
     align-items: center;
     /* justify-content: space-around; */
 }
+
+.user-username {
+    height: 36px;
+    width: 36px;
+    border-radius: 50%;
+    border: 1px solid #e2493b;
+    background-color: #ee493a;
+    margin-top: 13px;
+    color: white;
+    font-size: 16px;
+    border: none;
+    position: relative;
+    display: inline-block;
+}
