--- a/app/assets/stylesheets/splash_nav.css
+++ b/app/assets/stylesheets/splash_nav.css
@@ -75,5 +75,68 @@ body {
     font-size: 50px;
 }
 
+@media only screen and (max-width: 768px) {
+
+    .splash-nav {
+        flex-direction: column;
+        justify-content: center;
+        display: flex;
+        width: 100%;
+        background-color: #fbf2f6;
+        padding-top: 25px;
+        padding-bottom: 30px;
+    }
+
+    .splash-right-nav {
+        align-self: center;
+        margin: 0px;
+        margin-top: 40px;
+    }
+
+    .splash-left-nav {
+        display: inline-flex;
+        align-items: flex-end;
+        align-self: center; 
+    }
+
+    .splash-header-logo {
+        margin-left: 0px;
+    }
+
+    .login-btn {
+        margin-right: 0px;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+
+    [class*="splash-section-"] {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    [class*="section-content-"] {
+        margin-top: 100px;
+        margin-bottom: 100px;
+        margin-left: 0px;
+        margin-right: 0px;
+        align-self: center;
+    }
+
+    [class*="text-section"] {
+        margin-left: 0px;
+        margin-right: 0;
+    }
+
+    .splash-section-2 {
+        flex-direction: column-reverse;
+    }
+
+    .splash-section-4 {
+        flex-direction: column-reverse;
+    }
+}
+
  
 
