--- a/app/assets/stylesheets/login_form.css
+++ b/app/assets/stylesheets/login_form.css
@@ -6,7 +6,7 @@
   margin: 10px;
   padding: 10px; */
   background-color: white;
-  width: 406px;
+  width: 400px;
   /* height: 400px; */
   border-radius: 7.5;
   border: solid 1px lightgray;
@@ -20,7 +20,8 @@
   margin: 0px;
   padding: 24px;
   font-size: 20px;
-  border: 1px solid lightgray
+  border: 1px solid lightgray;
+  font-weight: 500;
 }
 
 /* .close-x {
