--- a/app/assets/stylesheets/signup_form.css
+++ b/app/assets/stylesheets/signup_form.css
@@ -3,7 +3,7 @@
   flex-direction: column;
     /* justify-content: space-evenly; */
   background-color: white;
-  width: 406px;
+  width: 400px;
   /* height: 500px; */
   border-radius: 7.5;
   border: solid 1px lightgray;
@@ -16,7 +16,8 @@
   margin: 0px;
   padding: 24px;
   font-size: 20px;
-  border: 1px solid lightgray
+  border: 1px solid lightgray;
+  font-weight: 500;
 }
 
 .signup-username {
