--- a/app/assets/stylesheets/play.css
+++ b/app/assets/stylesheets/play.css
@@ -1,18 +1,44 @@
 #video-container {
-    /* width: 100%;
-    height: 100%; */
-    /* z-index: 10;
-    position: relative; */
+    z-index: 10;
+    position: relative;
     height: calc(100vh - 66px);
     overflow-y: scroll;
-    margin-left: 227px;
     display: flex;
     flex-direction: column;
     align-items: center; 
+    z-index: 15;
+    background-color: rgba(245, 244, 244, 2.781);
 }
 
 .video-player {
-    height: 533px;
+    height: 470px;
     width: 100%;
     background-color: black;
+    z-index: 10;
 }
+
+#play-info {
+    align-self: flex-start;
+    margin-top: 20px;
+    margin-left: 60px;
+}
+
+.play-description {
+    margin-top: 15px;
+}
+
+.play-title {
+    font-size: 36px;
+    font-weight: 500;
+}
+
+.owner-name {
+    font-weight: bold;
+    margin-top: 15px;
+}
+
+.play-date {
+    color: grey;
+    margin-top: 5px;
+}
+
