--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FoxeoFullstockProject</title>
+    <title>Foxeo</title>
+    <%= favicon_link_tag asset_path('favicon.ico') %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
@@ -31,7 +32,7 @@
       <script>
         window.currentUser = {
           "id": <%= current_user.id %>,
-          "username": "<%= current_user.username %>", // is user name needed????
+          "username": "<%= current_user.username %>",
           "email": "<%= current_user.email %>"
         };
       </script>
