--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -13,17 +13,21 @@ div.video-page-container {
 #video-list {
     display: flex;
     flex-direction: row;
+    /* flex-direction: column; */
     flex-wrap: wrap;
-    width: 360vw;
+    width: 250vw;
     margin-left: 40px;
+    height: 669px;
 }
 
 #video-page-list {
     display: flex;
+    flex-direction: column;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 200vw;
+    width: 100vw;
     margin-left: 40px;
+    height: 669px;
 }
 
 .home-list-item {
