--- a/app/assets/stylesheets/home_nav.css
+++ b/app/assets/stylesheets/home_nav.css
@@ -81,7 +81,8 @@
 }
 
 .nav-new-video:hover {
-    background-color: rgb(0, 111, 155);;
+    background-color: rgb(0, 111, 155);
+    border: 1px solid rgb(0, 111, 155);
 }
 
 .dropbtn {
