--- a/app/assets/stylesheets/home_sidebar.css
+++ b/app/assets/stylesheets/home_sidebar.css
@@ -52,7 +52,9 @@
 }
 
 .sidebar-new-video:hover {
-    background-color: rgb(0, 111, 155);;
+    background-color: rgb(0, 111, 155);
+    border: 1px solid rgb(0, 111, 155);
+
 }
 
 .line {
