--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -68,8 +68,8 @@
 
 .user-ul {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    /* flex-direction: column; */
+    justify-content: space-between;
     align-items: center;
     margin-top: 15px;
     padding-top: 15px;
@@ -79,45 +79,58 @@
 
 .user-full-name {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 25px;
     font-size: 40px;
     font-weight: 800;
 }
 
 .user-email {
-    margin-top: 5px;
-    margin-bottom: 15px;
+    margin-top: 10px;
     text-align: center;
 }
 
 .video-list-header {
     font-size: 30px;
     font-weight: 500;
-    margin: 10px;
-    margin-bottom: 10px;
+    margin-top: 25px;
 }
 
 .user-list-item h2 {
-    text-align: center;
-    margin: 5px;
+    margin: 10px;
+    /* text-align: center; */
 }
 
 .buttons {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-content: center;
 }
 
 .user-title {
-    font-size: 20px;
+    font-size: 23px;
     font-weight: 500;
 }
 
-.user-description {
-
+.user-stats {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 5px;
 }
 
-.user-upload-date {
+.user-stats h2 {
+    margin: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
 
+.first {
+    border-right: 1px solid gray;
+    padding-right: 20px;
+}
+
+.last {
+    border-left: 1px solid gray;
+    padding-left: 20px;
 }
