--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -146,7 +146,6 @@
 .footer {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     background-color: rgb(26, 46, 59);
     padding-left: 5px; 
     width: 100%;
@@ -163,27 +162,31 @@
 }
 
 .links {
-    display: inline-flex;
-    justify-content: space-around;
-    /* margin-right: 54px; */
+    display: flex;
+    justify-content: center;
     margin-top: 23px;
 }
 
+.links img {
+    height: 50px;
+    object-fit: contain;
+}
+
 .tag {
-    zoom: 12%;
-    margin-top: 93px;
+    height: 50px;
+    object-fit: contain;
 }
 
 .tag-2 {
-    zoom: 70%;
-    margin-left: 15px;
-    object-fit: cover;
+    margin-left: 5px;
+    height: 50px;
+    width: 50px;
+    object-fit: contain;
 }
 
 .footer-header-logo {
     color: white;
     margin-top: 30px;
-    /* margin-left: 54px; */
     margin-bottom: 70px;
     color: li
 }
