--- a/app/assets/stylesheets/splash_nav.css
+++ b/app/assets/stylesheets/splash_nav.css
@@ -16,7 +16,8 @@ body {
  .splash-header-logo {
     color: rgb(26, 46, 59);
     margin-left: 75px;
-    margin-top: 25px;
+    /* margin-top: 25px; */
+    padding-bottom: 7px;
 }
 
 .signup-btn {
@@ -93,10 +94,11 @@ body {
         margin-top: 40px;
     }
 
-    .splash-left-nav {
-        display: inline-flex;
-        align-items: flex-end;
-        align-self: center; 
+    div.splash-left {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 8px;
     }
 
     .splash-header-logo {
