--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       window.vertovURL = "<%= image_url('vertov.png') %>";
     </script>
      <script type="text/javascript">
-      window.gitLogoURL = "<%= image_url('GitHub_Logo.png') %>";
+      window.gitLogoURL = "<%= image_url('GitHub_Logo_White.png') %>";
     </script>
      <script type="text/javascript">
       window.linkSmallURL = "<%= image_url('linkedin_small.png') %>";
@@ -26,7 +26,7 @@
       window.gitWhiteURL = "<%= image_url('github.png') %>";
     </script>
     <script type="text/javascript">
-      window.linkSplashURL = "<%= image_url('linkedin-splash.png') %>";
+      window.linkSplashURL = "<%= image_url('linkedin-logo.png') %>";
     </script>
     <% if current_user %>
       <script>
