--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -13,9 +13,8 @@ div.video-page-container {
 #video-list {
     display: flex;
     flex-direction: row;
-    /* flex-direction: column; */
     flex-wrap: wrap;
-    width: 220vw;
+    width: 155vw;
     margin-left: 40px;
     height: 669px;
 }
@@ -54,7 +53,11 @@ div.video-page-container {
     -webkit-mask-size: 100% 98%;
     -webkit-mask-repeat: no-repeat;
     -webkit-mask-position: top;
-
+    /* box-shadow: 0 0 8px rgba(158, 158, 158, 0.6);
+    -moz-box-shadow: 0 0 8px rgba(155, 155, 155, 0.6);
+    -webkit-box-shadow: 0 0 8px rgba(156, 156, 156, 0.6);
+    -o-box-shadow: 0 0 8px rgba(156, 156, 156, 0.6);
+    box-shadow: lightgray; */
 }
 
 .video-title {
