--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
       window.linkSmallURL = "<%= image_url('linkedin_small.png') %>";
     </script>
     <script type="text/javascript">
-      window.gitWhiteURL = "<%= image_url('github.png') %>";
+      window.gitBlackURL = "<%= image_url('GitHub_Logo.png') %>";
     </script>
     <script type="text/javascript">
       window.linkSplashURL = "<%= image_url('linkedin-logo.png') %>";
@@ -37,6 +37,10 @@
         };
       </script>
     <% end %>
+    <meta property="og:title" content="Bubble Pop" />
+    <meta property="og:description" content="Bubble Pop is a Puzzle Bobble or Bust-A-Move clone written in JavaScript and HTML" />
+    <meta property="og:url" content="https://lordrickyz.github.io/bubble-pop/" />
+    <meta property="og:image" content="https://lordrickyz.github.io/bubble-pop/dist/preview/bubbleLink.gif" />
   </head>
 
   <body>
