--- a/app/assets/stylesheets/home_sidebar.css
+++ b/app/assets/stylesheets/home_sidebar.css
@@ -56,6 +56,33 @@
     border: 1px solid rgb(0, 111, 155);
 
 }
+.profile-link {
+    color: white;
+    background-color: rgb(78, 196, 55);
+    width: 187px;
+    height: 28px;
+    border: 1px solid rgb(78, 196, 55);
+    border-radius: 2.5px;
+    margin-top: 26px;
+    margin-left: 20px;
+    font-size: 15px;
+    text-decoration: none;
+    padding-top: 12px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    letter-spacing: 0.7px;
+    -webkit-box-align: center;
+    align-content: center;
+    justify-content: center;
+}
+
+.profile-link:hover {
+    background-color: rgb(51, 131, 35);
+    border: 1px solid rgb(51, 131, 35);
+
+}
 
 .line {
     border-top: 0.5px solid lightgray;
@@ -109,7 +136,8 @@
     /* border: grey 1px solid; */
     background-color: white;
     margin-left: 20px;
-    margin-top: 66px;
+    margin-top: 25px;
+    margin-bottom: 20px;
     height: 150px;
 }
 
