--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
     <meta property="og:title" content="Foxeo" />
     <meta property="og:description" content="Foxeo is a Vimeo's clone and is intended for storing and viewing videos." />
     <meta property="og:url" content="https://foxeo.herokuapp.com/#/" />
-    <meta property="og:image" content="app/assets/images/foxeo.png" />
+    <meta property="og:image" content="https://foxeo.herokuapp.com/#/FoxeoFullstockProject/app/assets/images/foxeo.png" />
   </head>
 
   <body>
