--- a/app/assets/stylesheets/api/comments.css
+++ b/app/assets/stylesheets/api/comments.css
@@ -3,6 +3,7 @@
     margin-top: 20px;
     margin-left: 60px;
     width: 70vw;
+
 }
 
 .comment-list-item {
@@ -12,6 +13,7 @@
     height: 100px;
     border-bottom: 1px solid lightgray;
     font-size: 14px;
+    justify-content: space-between;
 }
 
 .comment-author-initial {
@@ -41,7 +43,6 @@
     margin-left: 10px;
     justify-content: flex-start;
     align-self: baseline;
-    padding-top: 30px;
 }
 
 .comment-author-name {
@@ -116,15 +117,33 @@
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
-    height: 36px;
-    width: 36px;
+    height: 32px;
+    width: 32px;
     border-radius: 50%;
     border: 1px solid rgb(226, 73, 59);
     background-color: rgb(238, 73, 58);
     color: white;
-    font-size: 16px;
+    font-size: 14px;
     text-align: center;
     margin-left: 60px;
     margin-top: 42px;
+}
+
+#delete-button {
+    align-self: end;
+    color: red;
+    font-weight: 700;
+    margin-top: 7px;
+    cursor: pointer;
+    display: none;
+}
+
+.comment-list-item:hover > #delete-button {
+    display: block;
+}
+
+#left-side {
+    display: flex;
+    flex-direction: row;
 }
 
