--- a/app/assets/stylesheets/api/comments.css
+++ b/app/assets/stylesheets/api/comments.css
@@ -102,7 +102,7 @@
     margin-left: 15px;
     font-size: 12px;
     color: rgb(0, 173, 239);
-    text-decoration: underline;
+    /* text-decoration: underline; */
     align-self: center;
 }
 
