Added like button and play count to play

--- a/app/assets/stylesheets/api/comments.css
+++ b/app/assets/stylesheets/api/comments.css
@@ -136,6 +136,7 @@
     margin-top: 7px;
     cursor: pointer;
     display: none;
+    margin-right: 10px;
 }
 
 .comment-list-item:hover > #delete-button {
