--- a/app/assets/stylesheets/likes.scss
+++ b/app/assets/stylesheets/likes.scss
@@ -1,3 +1,42 @@
 // Place all the styles related to the Likes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+// .like {
+//     color: white;
+//     position:absolute;
+//     float:right;
+//     width:90vw;
+//     min-height:10px;
+//     // background-color:#000;
+//     margin-top: 15px;
+//     z-index:300000;
+// }
+
+
+.like-video-button {
+    float: right;
+    width: 100px;
+    height: 40px;
+    background-color: rgb(0, 173, 239);
+    border: 1px solid rgb(0, 173, 239);
+    border-radius: 3.5px;
+    color: white;
+    font-weight: 500;
+    font-size: 14px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.play-count {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: -7px;
+    margin-top: 5px;
+    font-size: 1rem;
+}
+
+.play-count > img {
+    height: 30px;
+}
+
