--- a/app/assets/stylesheets/likes.scss
+++ b/app/assets/stylesheets/likes.scss
@@ -12,9 +12,7 @@
 //     z-index:300000;
 // }
 
-
 .like-video-button {
-    float: right;
     width: 100px;
     height: 40px;
     background-color: rgb(0, 173, 239);
@@ -36,7 +34,41 @@
     font-size: 1rem;
 }
 
+.video-info {
+    display: flex;
+    flex-direction: row;
+    margin-top: 15px;
+}
 .play-count > img {
     height: 30px;
+}
+
+.likes-count {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: -7px;
+    margin-top: 5px;
+    font-size: 1rem;
+}
+
+.likes-count > img {
+    height: 26px;
+    margin-left: 30px;
+    margin-right: 7px;
+}
+.comments-count {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: -7px;
+    margin-top: 5px;
+    font-size: 1rem;
+}
+
+.comments-count > img {
+    height: 26px;
+    margin-left: 30px;
+    margin-right: 7px;
 }
 
