--- a/app/assets/stylesheets/liked_video.css
+++ b/app/assets/stylesheets/liked_video.css
@@ -1,27 +1,83 @@
-div.liked-container {
+#liked-container {
     height: calc(100vh - 66px);
     overflow-y: scroll;
     margin-left: 227px;
+}
+
+.liked-page-title {
+    overflow-y: scroll;
+    align-self: start;
+    font-size: 27px;
+    margin-left: 100px;
+    margin-top: 33px;
+    margin-bottom: 17px;
+    font-weight: 500;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;   
+    flex-direction: row;
+}
+
+#liked-ul { 
+    margin-left: 85px;
+    margin-top: 33px;
+    margin-bottom: 17px;
+    display: flex;
+    flex-direction: row;
 }
 
 #liked-footer {
     display: inline-flex;
     align-self: flex-start;
-    margin-left: 60px;
+    margin-left: 100px;
     margin-bottom: 25px;
     margin-top: 25px;
     bottom: 0;
     position: inherit;
 }
 
-.liked-page-containter {
-    margin-left: 227px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;   
+.liked-username {
+    color: black;
+    text-decoration: none;
+    font-size: 36px;
+    margin-right: 9px;
+    font-weight: bold;
+}
+
+.liked-username:hover {
+    color: rgb(0, 173, 239);
+}
+
+.liked-subtitle {
+    color: #445566;
+    font-size: 36px;
+    font-weight: 400;
+}
+
+.liked-video {
+    margin-top: 15px;
+    height: 176px;
+    width: 305px;
+    cursor: pointer;
+    opacity: 1;
+}
+
+.liked-list-item {
+    margin: 15px;
+    margin-bottom: 50px;
+}
+
+.liked-list-item  .liked-video {
+    background-color: black;
+}
+
+.liked-video-title {
+    font-size: 14px;
+    margin-top: 4px;
+    font-weight: bold;
+}
+
+.liked-upload-date {
+    margin-top: 4px;
+    font-size: 12px;
+    line-height: 1;
+    color: #acb1b4;
 }
