changed edit button

--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -46,8 +46,8 @@
     margin: 5px;
     color: white;
     font-weight: 500;
-    background-color: #7fc400;
-    border: 1px solid #7fc400;
+    background-color:rgb(78, 196, 55);
+    border: 1px solid rgb(78, 196, 55);
     border-radius: 3.4px;
     cursor: pointer;
     display: flex;
