--- a/app/assets/stylesheets/video.css
+++ b/app/assets/stylesheets/video.css
@@ -15,5 +15,55 @@ div.video-container {
     margin-bottom: 25px;
     margin-top: 25px;
     bottom: 0;
-    position: inherit;
+    position: absolute;
+}
+
+.video-page-title {
+    overflow-y: scroll;
+    align-self: start;
+    font-size: 27px;
+    margin-left: 324px;
+    margin-top: 33px;
+    margin-bottom: 17px;
+    font-weight: 500;
+    display: flex;
+    flex-direction: row;
+}
+
+.video-page-container {
+    margin-left: 227px;
+}
+
+.video-right-side {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: auto;
+    margin-right: 150px;
+    margin-top: 60px;
+}
+
+.your-videos {
+    font-size: 18px;
+    font-weight: 700;
+    text-decoration: none;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    color: rgb(0, 173, 239);
+    cursor: default;
+}
+
+.video-likes {
+    color: black;
+    font-size: 18px;
+    font-weight: 700;
+    text-decoration: none;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    cursor: pointer;
+}
+
+.video-likes:hover {
+    color: rgb(0, 173, 239);
 }
