--- a/app/assets/stylesheets/likes.scss
+++ b/app/assets/stylesheets/likes.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #like {
-    fill: white;
+    fill: red;
     // position:absolute;
     // background-color:#000;
     margin-top: -417px;
@@ -24,7 +24,7 @@
     font-weight: 500;
     font-size: 14px;
     cursor: pointer;
-    margin-right: 10px;
+    margin-left: 30px;
 }
 
 .play-count {
@@ -110,7 +110,6 @@
     position: absolute;
     z-index: 1000;
     bottom: -1.5%;
-    margin-left: -7px;
 }
 
 .comments-count:hover .hidden-comments {
@@ -121,6 +120,7 @@
     height: 26px;
     margin-left: 30px;
     margin-right: 7px;
+    margin-bottom: -2px;
 }
 
 .far fas-heart {
