--- a/app/assets/stylesheets/liked_video.css
+++ b/app/assets/stylesheets/liked_video.css
@@ -30,7 +30,6 @@
     margin-left: 100px;
     margin-bottom: 25px;
     margin-top: 25px;
-    bottom: 0;
     position: inherit;
 }
 
@@ -95,6 +94,7 @@
     align-items: center;
     margin-left: auto;
     margin-right: 150px;
+    margin-bottom: 110px;
 }
 
 .browse-liked {
