changed jbuider for like

--- a/app/assets/stylesheets/api/comments.css
+++ b/app/assets/stylesheets/api/comments.css
@@ -63,7 +63,7 @@
     font-weight: 500;
 }
 
-.create-comment-body {
+#create-comment-body {
     width: 63vw;
     margin-left: 20px;
     margin-top: 3px;
