fixed typo in singup form

--- a/app/views/likes/show.html.erb
+++ b/app/views/likes/show.html.erb
@@ -1,2 +1,2 @@
-<p>liker_id: <%= @comment.liker_id %></p>
-<p>video_id: <%= @comment.video_id %></p>
+<p>liker_id: <%= @like.liker_id %></p>
+<p>video_id: <%= @like.video_id %></p>
