Created carousel container

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -223,10 +223,10 @@ div.video-page-container {
     background: linear-gradient(to right, white, transparent 90%);
 }
 
-#home-ul {
-    /* position: absolute;
-    left: 228px; */
-}
+/* #home-ul {
+    position: absolute;
+    left: 228px; 
+} */
 
 
 
